# Hermes

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  counter  phase1_counter.cpp
docs/: bench_results.md
docs/plans/: 2026-03-28-phase1-message-counter-design.md  2026-03-28-phase2-parser-implementation.md  2026-03-28-phase3-order-book-design.md  2026-03-28-phase4-signal-engine.md  2026-03-29-phase6-readme.md
include/: itch_parser.hpp  latency_profiler.hpp  order_book.hpp  signal_engine.hpp
src/: itch_parser.cpp  latency_profiler.cpp  main.cpp  order_book.cpp  signal_engine.cpp
tests/: test_integration.cpp  test_latency_profiler.cpp  test_order_book.cpp  test_parser.cpp  test_signals.cpp
